crates/ditto-checker/tests/golden/type-errors/unknown_type_variable.ditto
module Test exports (..)

type Foo = Foo(a)
